fix: correct spacing at the end and perefer medium over bold

--- a/modules/nupkgs/astal/conf/styles.scss
+++ b/modules/nupkgs/astal/conf/styles.scss
@@ -16,7 +16,7 @@ $white: #e5e9f0;
 }
 
 label {
-  font-weight: bold;
+  font-weight: 500;
 }
 
 progress, highlight {
@@ -109,7 +109,7 @@ menu {
 }
 
 .clock {
-  margin-right: 12px;
+  margin-right: 6px;
 }
 
 .tray {
